--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=yes">
     <title>👻 SIMON · HORROR EDITION 👻</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="icon/png" href="icon.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -38,4 +39,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
