--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=yes">
     <title>👻 SIMON · HORROR EDITION 👻</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="icon/png" href="icon.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Simon Says Game</h1>
-    <h2>Press any key to start the game</h2>
+    <h2 id="main-message">Press any key to start the game</h2>
     
     <div class="score-board">
         <div class="score-card">
@@ -22,7 +21,8 @@
     </div>
 
     <div class="controls">
-        <button id="restart-btn" class="control-btn">🔄 Restart</button>
+        <button id="start-btn" class="control-btn start-btn">🎮 Start Game</button>
+        <button id="restart-btn" class="control-btn" style="display: none;">🔄 Restart</button>
         <button id="resume-btn" class="control-btn" style="display: none;">⏯️ Resume Game</button>
     </div>
 
@@ -39,5 +39,4 @@
 
     <script src="app.js"></script>
 </body>
-
 </html>
